--- a/html/style.css
+++ b/html/style.css
@@ -10,4 +10,10 @@ nav > ul {
 
 nav > ul > li {
   float: left;
+  margin-right: 20px;
+}
+
+nav > ul > li > a {
+  text-decoration: none;
+  color: black;
 }
