--- a/Main/style.css
+++ b/Main/style.css
@@ -1,7 +1,9 @@
 nav {
   background-color: white;
   position: fixed;
-  padding-bottom: 30px;
+  width: 100vw;
+
+  margin-top: -40px;
 }
 
 nav > ul {
@@ -27,4 +29,26 @@ nav > ul > li:not(.nicht-animieren):hover {
 
 body {
   margin: 0;
+}
+
+.game {
+  display: flex;
+  gap: 20px;
+  margin: 30px;
+  width:80%;
+
+  padding-top: 40px;
+}
+
+.game > img {
+  height: 200px;
+}
+
+.game > div > strong {
+  font-size: larger;
+  color: red;
+}
+
+button {
+  
 }
