--- a/Main/style.css
+++ b/Main/style.css
@@ -67,3 +67,9 @@ button {
 .topnav{
   background-color:gray;
 }
+
+body {
+  margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #1b2838;
+}
