--- a/Main/style.css
+++ b/Main/style.css
@@ -19,7 +19,7 @@ nav > ul > li {
 
 nav > ul > li > a {
   text-decoration: none;
-  color:	#c7d5e0;
+  color: #ffffff;
 
 }
 
@@ -27,10 +27,6 @@ nav > ul > li:not(.nicht-animieren):hover {
   background-color: lightslategray; 
   color:white;
 } 
-
-body {
-  margin: 0;
-}
 
 .game {
   display: flex;
@@ -69,7 +65,7 @@ button {
 }
 
 body {
-  margin: 0px;
+  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #1b2838;
 }
