--- a/Main/style.css
+++ b/Main/style.css
@@ -1,3 +1,8 @@
+*{
+  text-decoration: none !important;
+}
+
+
 nav {
   background-color: white;
   position: fixed;
@@ -32,14 +37,14 @@ nav > ul > li:not(.nicht-animieren):hover {
   display: flex;
   gap: 20px;
   margin: 30px;
-  width:80%;
+  width: 1600px !important;
 
   border: 2px solid grey;
   background-color: #f5f5f5;
 }
 
 .game > img {
-  width: 200px;
+  width: 200px !important; 
   height: 140px;
 }
 
@@ -48,18 +53,17 @@ nav > ul > li:not(.nicht-animieren):hover {
   color: red;
 }
 
-button {
-  
-}
-
 .padder {
   padding: 40px;
 }
+
 .games{
   display:flex;
   flex-wrap:wrap;
   justify-content: center;
+  width: 100%;
 }
+
 .topnav{
   background-color:#2a475e;
 }
