--- a/Main/style.css
+++ b/Main/style.css
@@ -43,14 +43,17 @@ nav > ul > li > a > img {
   gap: 20px;
   margin: 30px;
   width: 1600px !important;
-
-  border: 2px solid grey;
-  background-color: #f5f5f5;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background: rgb(42,71,94);
+  background: linear-gradient(90deg, rgba(42,71,94,1) 0%, rgba(0,212,255,1) 100%);
 }
 
 .game > img {
   width: 200px !important; 
   height: 140px;
+}
+.game > div {
+  color: #ffffff;
 }
 
 .game > div > strong {
@@ -70,11 +73,13 @@ nav > ul > li > a > img {
 }
 
 .topnav{
-  background-color:#2a475e;
+  background: rgb(23,26,33);
+  background: radial-gradient(circle, rgba(23,26,33,1) 22%, rgba(55,67,84,1) 100%);
 }
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #1b2838;
+  background: rgb(27,40,56);
+  background: linear-gradient(90deg, rgba(27,40,56,1) 28%, rgba(42,71,94,1) 100%);
 }
