--- a/Main/style.css
+++ b/Main/style.css
@@ -28,7 +28,7 @@ nav > ul > li > a {
 
 }
 
-nav > ul > li:not(.nicht-animieren):hover {
+nav > ul > li:not(.nicht-animieren);(.download):hover {
   background-color: lightslategray; 
   color:white;
 } 
@@ -82,4 +82,24 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: rgb(27,40,56);
   background: linear-gradient(90deg, rgba(27,40,56,1) 28%, rgba(42,71,94,1) 100%);
+}
+
+.dailygame {
+  display: flex;
+  gap: 20px;
+  margin-top: 200px;
+  width: 1600px !important;
+  height: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background: rgb(42,71,94);
+  background: linear-gradient(90deg, rgba(42,71,94,1) 0%, rgba(0,212,255,1) 100%);
+}
+
+.dailygame > div > strong {
+  font-size: larger;
+  color: red;
+}
+
+.dailygame > div {
+  color: #ffffff;
 }
