--- a/Main/style.css
+++ b/Main/style.css
@@ -110,5 +110,13 @@ body {
 }
 
 .kontakt {
-  
+  margin-top: 100px;
+}
+
+.badge {
+  background-color: red;
+  color: white;
+  padding: 4px 8px;
+  text-align: center;
+  border-radius: 5px;
 }
