--- a/Main/style.css
+++ b/Main/style.css
@@ -42,14 +42,14 @@ nav > ul > li > a > img {
   display: flex;
   gap: 20px;
   margin: 30px;
-  width: 1600px !important;
+  min-width: 1600px ;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background: rgb(42,71,94);
   background: linear-gradient(90deg, rgba(42,71,94,1) 0%, rgba(0,212,255,1) 100%);
 }
 
 .game > img {
-  width: 200px !important; 
+  width: 200px ; 
   height: 140px;
 }
 .game > div {
@@ -59,6 +59,16 @@ nav > ul > li > a > img {
 .game > div > strong {
   font-size: larger;
   color: red;
+}
+
+.game-big > div {
+  font-size: 120% ;
+  padding: 4em;
+}
+
+.game-big > img {
+  width: 440px;
+  height: 320px;
 }
 
 .padder {
@@ -106,7 +116,7 @@ body {
 
 .download {
   margin-top: 5px;
-  margin-left: 1850px;
+  ;
 }
 
 .kontakt {
