--- a/Main/style.css
+++ b/Main/style.css
@@ -130,3 +130,12 @@ body {
   text-align: center;
   border-radius: 5px;
 }
+
+.kaufen {
+  margin-left: 300px;
+}
+
+.tabelle {
+  color: white;
+  margin-left: 50px;
+}
